--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "highcharts": "^9.3.2",
     "highcharts-more": "^0.1.7",
     "highcharts-react-official": "^3.1.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-sparklines": "^1.7.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
